RESOLVED FIXED59429
Fix last strict OwnPtr violation under svg/...
https://bugs.webkit.org/show_bug.cgi?id=59429
Summary Fix last strict OwnPtr violation under svg/...
Adam Klein
Reported 2011-04-26 00:13:07 PDT
Fix last strict OwnPtr violation under svg/...
Attachments
Patch (1.44 KB, patch)
2011-04-26 00:13 PDT, Adam Klein
abarth: review+
abarth: commit-queue-
Adam Klein
Comment 1 2011-04-26 00:13:37 PDT
Adam Barth
Comment 2 2011-04-26 00:24:56 PDT
Comment on attachment 91075 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=91075&action=review > Source/WebCore/svg/SVGDocumentExtensions.cpp:243 > - OwnPtr<SVGPendingElements> set(m_pendingResources.get(id)); > + OwnPtr<SVGPendingElements> set(adoptPtr(m_pendingResources.get(id))); We prefer the assignment form of the constructor: OwnPtr<SVGPendingElements> set = adoptPtr(m_pendingResources.get(id));
Adam Barth
Comment 3 2011-04-26 00:27:59 PDT
I can land this for you.
Adam Barth
Comment 4 2011-04-26 00:30:22 PDT
WebKit Review Bot
Comment 5 2011-04-26 04:12:24 PDT
http://trac.webkit.org/changeset/84891 might have broken SnowLeopard Intel Release (WebKit2 Tests)
Note You need to log in before you can comment on or make changes to this bug.