2011-04-26  Adam Klein  <adamk@chromium.org>

Reviewed by Adam Barth.

        Fix last strict OwnPtr violation under svg/...
        https://bugs.webkit.org/show_bug.cgi?id=59429

        * svg/SVGDocumentExtensions.cpp:
        (WebCore::SVGDocumentExtensions::removePendingResource):


Canonical link: https://commits.webkit.org/74613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84891 268f45cc-cd09-0410-ab3c-d52691b4dbfc